Lot of refactoring. Changed discordId to Long